--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "A browser firendly .ics/.vcs file generator written entirely in javascript",
   "main": "ics.js",
   "dependencies": {
-    "bower": "~1.2.8",
     "file-saver": "^1.3.3",
-    "grunt": "~0.4.2",
+    "grunt": "^1.0.3",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-jshint": "~0.7.2",
-    "grunt-contrib-uglify": "~0.2.7",
-    "grunt-mocha": "~0.4.6"
+    "grunt-contrib-jshint": "^2.0.0",
+    "grunt-contrib-uglify": "^4.0.0",
+    "grunt-mocha": "^1.1.0"
   },
   "devDependencies": {},
   "scripts": {
